--- a/front-angular/src/app/app.component.html
+++ b/front-angular/src/app/app.component.html
@@ -39,20 +39,36 @@
   <div class="flex-1 bg-neutral-700 rounded-sm" >
     @if (connectionState === 'disconnected') {
       <p class="text-center">Connect to see the chat</p>
+    } @else if (connectionState === 'inital-connection') {
+      <p class="text-center">Joining to the chat</p>
+    } @else {
+      @if (messages.length === 0) {
+        <p class="text-center">No messages yet</p>
+      } @else {
+        <div class="flex flex-col gap-2 p-2">
+          <div 
+            *ngFor="let message of messages; let i = index"
+            class="flex gap-2"
+          >
+            <p>{{ message.message }}</p>
+          </div>
+        </div>
+      
+      }
     }
   </div>
 
   <form>
-    <div class="flex">
+    <div class="flex bg-neutral-700 p-2 gap-2">
       <textarea  
         [(ngModel)]="message" 
         name="message" 
         placeholder="Type your message here"
-        class="resize-none w-full max-h-20 p-2 rounded-l-sm bg-neutral-700 focus:outline-none"
+        class="resize-none w-full max-h-20 p-2 rounded bg-neutral-700 focus:outline-none border border-neutral-800"
       >
       </textarea>
       <button 
-        class="bg-neutral-700 hover:text-blue-700 rounded-r-sm transition-colors px-2 disabled:pointer-events-none disabled:text-gray-500"
+        class="bg-neutral-800 rounded max-h-full hover:text-blue-700 rounded-r-sm transition-colors p-2 disabled:pointer-events-none disabled:text-gray-500"
         [disabled]="connectionState !== 'connected'"
       >
         <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-send-2"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4.698 4.034l16.302 7.966l-16.302 7.966a.503 .503 0 0 1 -.546 -.124a.555 .555 0 0 1 -.12 -.568l2.468 -7.274l-2.468 -7.274a.555 .555 0 0 1 .12 -.568a.503 .503 0 0 1 .546 -.124z" /><path d="M6.5 12h14.5" /></svg>
