split app component in different components

--- a/front-angular/src/app/components/app/app.component.html
+++ b/front-angular/src/app/components/app/app.component.html
@@ -1,79 +1,7 @@
 <main
   class="flex flex-col gap-2 h-screen max-w-xl m-auto p-2"
 >
-  <input 
-    [(ngModel)]="username"
-    name="username"
-    placeholder="Type your username"
-    class="p-2 rounded-sm"
-    required
-    minlength="3"
-    #usernameInput="ngModel"
-    [disabled]="connectionState !== 'disconnected'"
-  >
-  @if (usernameInput.invalid) {
-    @if (usernameInput.errors?.required) {
-      <p class="text-red-500">Username is required</p>
-    }
-    @if (usernameInput.errors?.minlength) {
-      <p class="text-red-500">Username must be at least 3 characters long</p>
-    }
-  }
-  <div class="flex gap-2">
-    <button 
-      [disabled]="connectionState !== 'disconnected' || usernameInput.invalid" 
-      (click)="connect()"
-      class="flex-1 bg-blue-700 hover:bg-blue-800 disabled:pointer-events-none disabled:bg-gray-500 text-white font-bold py-2 px-4 rounded transition-colors"
-    >
-      Connect to Chat
-    </button>
-    <button 
-      [disabled]="connectionState === 'disconnected'" 
-      (click)="disconnect()"
-      class="flex-1 bg-blue-700 hover:bg-blue-800 disabled:pointer-events-none disabled:bg-gray-500 text-white font-bold py-2 px-4 rounded transition-colors"
-    >
-      Disconnect from Chat
-    </button>
-  </div>
-
-  <div class="flex-1 bg-neutral-700 rounded-sm overflow-auto">
-    @if (connectionState === 'disconnected') {
-      <p class="text-center">Connect to see the chat</p>
-    } @else if (connectionState === 'inital-connection') {
-      <p class="text-center">Joining to the chat</p>
-    } @else {
-      @if (messages.length === 0) {
-        <p class="text-center">No messages yet</p>
-      } @else {
-        <div class="flex flex-col gap-2 p-2">
-          <app-message 
-            *ngFor="let message of messages;"
-            class="block"
-            [message]="message"
-          >
-          </app-message>
-        </div>
-      }
-    }
-  </div>
-
-  <form (submit)="sendMessage()">
-    <div class="flex bg-neutral-700 p-2 gap-2">
-      <textarea  
-        [(ngModel)]="message" 
-        name="message" 
-        placeholder="Type your message here"
-        class="resize-none w-full max-h-20 p-2 rounded bg-neutral-700 focus:outline-none border border-neutral-800"
-        required
-        #messageInput="ngModel"
-      >
-      </textarea>
-      <button 
-        class="bg-neutral-800 rounded max-h-full hover:text-blue-700 rounded-r-sm transition-colors p-2 disabled:pointer-events-none disabled:text-gray-500"
-        [disabled]="connectionState !== 'connected' || messageInput.invalid"
-      >
-        <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-send-2"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4.698 4.034l16.302 7.966l-16.302 7.966a.503 .503 0 0 1 -.546 -.124a.555 .555 0 0 1 -.12 -.568l2.468 -7.274l-2.468 -7.274a.555 .555 0 0 1 .12 -.568a.503 .503 0 0 1 .546 -.124z" /><path d="M6.5 12h14.5" /></svg>
-      </button>
-    </div>
-  </form>
+  <chat-header class="flex flex-col gap-2" />
+  <chat-messages class="flex flex-1 overflow-y-auto" />
+  <chat-footer />
 </main>
