--- a/front-angular/src/app/components/message/message.component.html
+++ b/front-angular/src/app/components/message/message.component.html
@@ -10,7 +10,7 @@
       <app-tail dir="in"></app-tail>
     }
     <div
-      class="px-2 rounded w-fit flex flex-col"
+      class="p-2 rounded w-fit flex flex-col gap-2"
       [ngClass]="{
         'bg-neutral-800 text-white': message.from !== 'server',
         'bg-neutral-500': message.from === 'server',
@@ -22,6 +22,13 @@
         <p class="text-[#00cb79]">
           {{ message.from }}
         </p>
+      }
+      @if (message.image != null) {
+        <img
+          class="rounded"
+          src="http://localhost:8080/public/tmp/images/{{ message.image }}"
+          alt="Image"
+        />
       }
       <p>
         {{ message.text }}
