--- a/front-angular/src/app/components/chat-footer/chat-footer.component.html
+++ b/front-angular/src/app/components/chat-footer/chat-footer.component.html
@@ -6,6 +6,16 @@
       class="w-20 h-20 object-cover rounded"
     />
   }
+  @if (audio) {
+    <audio 
+      [src]="audio | toSrc" 
+      controls 
+      class="w-full"
+    >
+      Your browser does not support the
+      <code>audio</code> element.
+    </audio>
+  }
   <div class="flex gap-2">
     <textarea  
       [(ngModel)]="message" 
@@ -16,9 +26,21 @@
       #messageInput="ngModel"
     >
     </textarea>
+    <button 
+      class="flex p-3 rounded h-fit hover:text-blue-700 rounded-r-sm transition-colors disabled:pointer-events-none disabled:text-gray-500"
+      [disabled]="connectionState !== 'connected'"
+      type="button"
+      (click)="toggleAudioRecording()"
+      [ngClass]="{
+        'bg-red-500': recordingState === 'recording',
+        'bg-neutral-800': recordingState === 'stopped'
+      }"
+    >
+      <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-microphone"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 2m0 3a3 3 0 0 1 3 -3h0a3 3 0 0 1 3 3v5a3 3 0 0 1 -3 3h0a3 3 0 0 1 -3 -3z" /><path d="M5 10a7 7 0 0 0 14 0" /><path d="M8 21l8 0" /><path d="M12 17l0 4" /></svg>    
+    </button>
     <label 
       for="image"
-      class="flex p-3 bg-neutral-800 rounded max-h-full rounded-r-sm transition-colors"
+      class="flex p-3 bg-neutral-800 rounded h-fit rounded-r-sm transition-colors"
       [ngClass]="{
         'pointer-events-none text-gray-500': connectionState !== 'connected',
         'hover:text-blue-700 cursor-pointer': connectionState === 'connected'
@@ -37,7 +59,7 @@
       <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-paperclip"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M15 7l-6.5 6.5a1.5 1.5 0 0 0 3 3l6.5 -6.5a3 3 0 0 0 -6 -6l-6.5 6.5a4.5 4.5 0 0 0 9 9l6.5 -6.5" /></svg>
     </label>
     <button 
-      class="flex p-3 bg-neutral-800 rounded max-h-full hover:text-blue-700 rounded-r-sm transition-colors disabled:pointer-events-none disabled:text-gray-500"
+      class="flex p-3 bg-neutral-800 rounded h-fit hover:text-blue-700 rounded-r-sm transition-colors disabled:pointer-events-none disabled:text-gray-500"
       [disabled]="connectionState !== 'connected' || messageInput.invalid"
     >
       <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-send-2"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4.698 4.034l16.302 7.966l-16.302 7.966a.503 .503 0 0 1 -.546 -.124a.555 .555 0 0 1 -.12 -.568l2.468 -7.274l-2.468 -7.274a.555 .555 0 0 1 .12 -.568a.503 .503 0 0 1 .546 -.124z" /><path d="M6.5 12h14.5" /></svg>
